<resources>
    <string name="app_name">login</string>
    <string name="l">Login</string>
    <string name="s">Sign Up</string>
    <string name="v">beta 1.0</string>
    <string name="icon">icon</string>
    <string name="p"> password</string>
    <string name="u"> username</string>
    <string name="f">forgot password</string>
    <string name="title">River Mile</string>
    <string name="signin">SIGN IN</string>
    <string name="per">Personal Information</string>
    <string name="sut">SIGN UP</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="fname">FIRST/GIVEN NAME</string>
    <string name="username">Enter your username</string>
    <string name="eyp">Enter your password</string>
    <string name="ln">LAST/FAMILY/SURNAME</string>
    <string name="next">Next</string>
    <string name="flog">for login</string>
    <string name="date">DATE OF BIRTH</string>
    <string name="later">Do It Later</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cf">Confirm your password</string>
    <string name="email">Enter your e-mail</string>
    <string name="signd">Sign in instead</string>
    <string name="setn">Enter your new password</string>
    <string name="age">Age</string>
    <string name="set">Set your new password</string>


    <!--    new-->
    <string name="no_user">This user has not registered</string>
    <string name="user_id_used">This username has already been registered</string>
    <string name="email_used">This email has been registered</string>
    <string name="email_unused">This email has not been registered</string>
    <string name="pwd_error">The password is incorrect</string>
    <string name="first_name">Enter your first_name</string>
    <string name="last_name">Enter your last_name</string>
    <string name="affirm_pwd">Please confirm your password</string>
    <string name="affirm_pwd_error">Passwords are inconsistent</string>
    <string name="registered_successfully">register successfully</string>
    <string name="update_successfully">update successfully</string>
    <string name="confirm">confirm</string>
    <string name="sis">welcome</string>


</resources>
